2013-03-05  Paul Eggert  <eggert@cs.ucla.edu>

	* deuglify.el, gnus-delay.el, gnus-spec.el, gnus-sum.el, html2text.el,
	message.el, mm-decode.el, mml1991.el, nnir.el, shr.el, utf7.el:
	Prefer UTF-8 when the encoding shouldn't matter and changes are small.

2013-03-03  Ted Phelps  <phelps@gnusto.com>

	* shr.el: Make all the overlays set the `evaporate' property so that
	they're removed properly.

2013-02-25  Adam Sjøgren  <asjo@koldfront.dk>  (tiny change)

	* mml2015-el (mml2015-epg-key-image): wrap epg-gpg-program in
	shell-quote-argument.

2013-02-22  David Engster  <deng@randomsample.de>

	* gnus-registry.el (gnus-registry-save): Provide class name when
	calling `eieio-persistent-read' to avoid "unsafe call" warning.  Use
	`condition-case' to stay compatible with older EIEIO versions which
	only accept one argument.

2013-02-17  Daiki Ueno  <ueno@gnu.org>

	* mml2015.el (epg-key-user-id-list, epg-user-id-string)
	(epg-user-id-validity): Autoload.
	(mml2015-epg-check-user-id): New function.
	(mml2015-epg-check-sub-key): New function split from
	mml2015-epg-find-usable-key.
	(mml2015-epg-find-usable-key): Accept context, name, usage, and
	optional name-is-key-id, to handle the case when user-id is unusable.
	Reported by Łukasz Stelmach <stlman@poczta.fm>.

2013-02-17  Glenn Morris  <rgm@gnu.org>

	* shr.el (shr-put-image): Use image-multi-frame-p if available.

2013-02-16  Glenn Morris  <rgm@gnu.org>

	* shr.el (shr-put-image): Only animate images that specify a delay.
	This is consistent with the old image-animated-p behavior.

2013-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-define-keys): Convert [?\S-\ ] to [(shift space)]
	for XEmacs.

2013-02-13  Juri Linkov  <juri@jurta.org>

	* gnus-art.el (gnus-article-mode-map):
	* gnus-sum.el (gnus-summary-mode-map, gnus-summary-article-map):
	Make S-SPC scroll in the opposite sense to SPC.  (Bug#2145)

2013-02-07  Gábor Vida  <gabor.v.vida@ericsson.com>  (tiny change)
